Display nice command path during dump requests.